--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,7 +63,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\ArrowClickHandler.cs" />
     <Compile Include="Assets\CloudErrorHandler.cs" />
     <Compile Include="Assets\CloudRecoEventHandler.cs" />
     <Compile Include="Assets\CloudTrackableEventHandler.cs" />
@@ -111,6 +110,7 @@
     <Compile Include="Assets\MessageBox.cs" />
     <Compile Include="Assets\scoreKeeper.cs" />
     <Compile Include="Assets\Scripts\Click.cs" />
+    <Compile Include="Assets\StarClickHandler.cs" />
     <Compile Include="Assets\Stop.cs" />
     <None Include="Assets\Lean\Common\Examples\Shaders\Alpha.shader" />
     <None Include="Assets\StreamingAssets\Vuforia\VuforiaMars_Images.xml" />
